force-app/main/default/objects/Request_And_Response_Storage__c/Request_And_Response_Storage__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Request And Response Storage</label>
</CustomObject>