force-app/main/default/objects/Request_And_Response_Storage__c/fields/Store_Company_Enquiry_Request_Response__c.field-meta.xml
<CustomField>
    <fullName>Store_Company_Enquiry_Request_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Company Enquiry Request Response</label>
    <type>Checkbox</type>
</CustomField>