force-app/main/default/objects/Request_And_Response_Storage__c/fields/Store_Equifax_Org_ID_Request_Response__c.field-meta.xml
<CustomField>
    <fullName>Store_Equifax_Org_ID_Request_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Equifax Org ID Request Response</label>
    <type>Checkbox</type>
</CustomField>