force-app/main/default/objects/Request_And_Response_Storage__c/fields/Store_Individual_Prv_Enq_RequestResponse__c.field-meta.xml
<CustomField>
    <fullName>Store_Individual_Prv_Enq_RequestResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Individual-Prv Enq RequestResponse</label>
    <type>Checkbox</type>
</CustomField>