force-app/main/default/objects/Request_And_Response_Storage__c/fields/Store_Land_Title_Store_Request_Response__c.field-meta.xml
<CustomField>
    <fullName>Store_Land_Title_Store_Request_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Land Title Search Request Response</label>
    <type>Checkbox</type>
</CustomField>