force-app/main/default/objects/Request_And_Response_Storage__c/fields/Store_SMSF_ABN_Search_Response__c.field-meta.xml
<CustomField>
    <fullName>Store_SMSF_ABN_Search_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store SMSF ABN Search Response</label>
    <type>Checkbox</type>
</CustomField>